--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bin/server.js",
+    "prestart": "npm run build",
+    "build": "webpack",
+    "dev": "concurrent --kill-others 'nodemon -w src/ bin/server.js' 'webpack -w'"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +24,11 @@
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5"
+  },
+  "devDependencies": {
+    "babel-loader": "^6.2.1",
+    "concurrently": "^1.0.0",
+    "nodemon": "^1.8.1",
+    "webpack": "^1.12.10"
   }
 }
