--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node bin/server.js",
     "prestart": "npm run build",
     "build": "webpack",
-    "dev": "concurrent --kill-others 'nodemon -w src/ bin/server.js' 'webpack -w'"
+    "dev": "DEBUG=*,-babel,-nodemon* concurrent --kill-others 'nodemon -w src/ bin/server.js' 'webpack -w'"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "debug": "^2.2.0",
     "express": "^4.13.3",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
