--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.5"
+    "react-router": "^2.0.0-rc4",
+    "redux": "^3.0.5",
+    "redux-simple-router": "^1.0.2"
   },
   "devDependencies": {
     "babel-loader": "^6.2.1",
